--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     {
       "script": "app.js",
       "log_date_format": "YYYY-MM-DD HH:mm:ss Z",
-      "max_memory_restart": "100M",
+//      "max_memory_restart": "100M",
       "merge_logs": true
     }
   ],
