--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pm2-auto-pull",
-  "version": "1.16.0",
+  "version": "2.0.0",
   "description": "PM2 module to auto pull applications when there is an update",
   "main": "app",
   "scripts": {
@@ -8,17 +8,15 @@
   },
   "dependencies": {
     "pmx": "latest",
-    "pm2": "*",
+    "pm2": "2.x",
     "async": "*",
     "debug": "*"
   },
   "apps": [
     {
-      "script": "app.js",
-      "log_date_format": "YYYY-MM-DD HH:mm:ss Z",
-      "merge_logs": true
+      "script": "app.js"
     }
   ],
-  "author": "",
+  "author": "Keymetrics",
   "license": "ISC"
 }
