--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pm2-auto-pull",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "PM2 module to auto pull applications when there is an update",
   "main": "app",
   "scripts": {
@@ -14,7 +14,9 @@
   },
   "apps": [
     {
-      "script": "app.js"
+      "script": "app.js",
+      "log_date_format": "YYYY-MM-DD HH:mm:ss Z",
+      "merge_logs": true
     }
   ],
   "author": "Keymetrics",
